--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,9 +12,9 @@ homepage = "https://github.com/pjwerneck/rqlalchemy"
 keywords = ['sqlachemy', 'sql', 'rql', 'querying', 'httpapi']
 
 [tool.poetry.dependencies]
-python = "^3.5"
+python = "^3.8"
 pyrql = "^0.6.0"
-sqlalchemy = "^1.2"
+sqlalchemy = "<2.0"
 
 [tool.poetry.dev-dependencies]
 pytest = ">=4.4.1"
@@ -22,3 +22,16 @@ pytest = ">=4.4.1"
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
+
+[tool.black]
+line-length = 99
+
+[tool.isort]
+profile = "black"
+force_single_line = "True"
+line_length = 99
+
+[tool.pytest.ini_options]
+pythonpath = [
+  "."
+]
