--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,8 +16,10 @@ python = "^3.8"
 pyrql = "^0.6.0"
 sqlalchemy = "^2.0"
 
-[tool.poetry.dev-dependencies]
-pytest = ">=4.4.1"
+[tool.poetry.group.dev.dependencies]
+isort = "^5.12.0"
+black = "^23.11.0"
+pytest = "^7.4.3"
 
 [build-system]
 requires = ["poetry>=0.12"]
