--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ sqlalchemy = "^2.0"
 isort = "^5.12.0"
 black = "^23.11.0"
 pytest = "^7.4.3"
+pytest-coverage = "^0.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
